--- a/mockup/css/style.css
+++ b/mockup/css/style.css
@@ -1,16 +1,17 @@
 body {
+	font-family: Arial, sans-serif;
 	margin:0px;
 	padding:0px;
 	background:url(images/background-pattern.jpg) top left;
 }
 
 a {
-	font-family: Arial, sans-serif;
 	text-decoration:none;
 }
 
-ul {
-	list-style:none;
+p {
+	margin:0;
+	padding:0;
 }
 
 h1 {
@@ -21,11 +22,16 @@ h1 {
 	padding:0;
 }
 
+ul {
+	list-style:none;
+}
+
 #wrapper {
 	width:1080px;
 	margin:0 auto;
 	padding:0px;
 	background:#eeeeee;
+	box-shadow:0 0 15px #000000;
 }
 
 #header {
@@ -33,6 +39,23 @@ h1 {
 	height:180px;
 	display:inline-block;
 	background:url(images/background-header.jpg) repeat-x top left;
+}
+
+#welcome {
+	float:right;
+	margin:20px 50px 0 0;
+}
+
+#welcome p {
+	display:inline;
+	font-size:16px;
+	color:#ffffff;
+}
+
+#welcome a {
+	font-size:14px;
+	display:inline;
+	color:#e8e7e8;
 }
 
 #navbar {
@@ -44,8 +67,11 @@ h1 {
 }
 
 #logo {
-	width:200px;
+	width:300px;
+	height:58px;
 	float:left;
+	background:url(images/logo.png) no-repeat;
+	margin-top:2px;
 }
 
 #home {
@@ -54,7 +80,7 @@ h1 {
 	background:url(images/home-icon.png);
 	position:absolute;
 	top:10px;
-	left:180px;
+	left:280px;
 }
 
 #home:hover {
@@ -62,7 +88,7 @@ h1 {
 }
 
 #navigation {
-	width:740px;
+	width:640px;
 	height:60px;
 	float:right;
 	background:url(images/navbar-blue.jpg) repeat-x top right;
@@ -96,9 +122,59 @@ h1 {
 
 #content {
 	width:940px;
-	height:1000px;
 	margin:0 70px 0 70px;
 	display:inline-block;
+}
+
+#main {
+	width:60%;
+	height:inherit;
+	display:inline-block;
+}
+
+#content-title {
+	width:100%;
+	height:30px;
+	display:inline-block;
+	margin:10px 0 10px 0;
+}
+
+#content-title h1 {
+	width:22%;
+	display:inline-block;
+	text-align:center;
+	margin:0;
+	padding:0;
+}
+
+#left-separator, 
+#right-separator {
+	width:38%;
+	display:inline-block;
+	margin:0;
+	padding:0;
+}
+
+#sidebar {
+	width:38%;
+	height:400px;
+	display:inline-block;
+	float:right;
+	margin-top:10px;
+	background:#e8e7e8;
+}
+
+#sidebar h1 {
+	margin:10px 0 10px 0;
+	text-align:center;
+}
+
+.content-section {
+	width:90%;
+	padding:5% 5% 5% 5%;
+	display:inline-block;
+	margin-bottom:30px;
+	background:#e8e7e8;
 }
 
 #footer {
@@ -109,17 +185,16 @@ h1 {
 	display:inline-block;
 }
 
-.section-separator {
-	width:940px;
+.separator {
 	height:10px;
 	background:url(images/separator.jpg) repeat-x left;
 	margin-bottom:20px;
 }
 
 .link-separator {
-	width:164px;
+	width:100%;
 	height:1px;
-	background:url(images/link-separator.jpg);
+	background:url(images/link-separator.jpg) repeat-x;
 	margin:10px 0 10px 0;
 }
 
