--- a/styles/login_registeration.css
+++ b/styles/login_registeration.css
@@ -53,7 +53,7 @@ label {
 input[type=submit] {
 	width: auto;
 	padding: 9px 15px;
-	background: #617798;
+	background: #2fccff;
 	border: 0;
 	font-size: 14px;
 	font-weight: bold;
