--- a/styles/login_registeration.css
+++ b/styles/login_registeration.css
@@ -53,7 +53,7 @@ label {
 input[type=submit] {
 	width: auto;
 	padding: 9px 15px;
-	background: #2fccff;
+	background: #2EBBE8;
 	border: 0;
 	font-size: 14px;
 	font-weight: bold;
@@ -64,7 +64,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-	background: #7387A6;
+	background: #2fccff;
 	-webkit-box-shadow: 1px 1px 8px rgba(0,0,0,.4);
 }
 
