Account page update
Devices now load in the devices sidebar

--- a/styles/account.css
+++ b/styles/account.css
@@ -171,6 +171,6 @@ button:hover {
 	-webkit-box-shadow: 1px 1px 8px rgba(0,0,0,.4);
 }
 
-#submit_holder {
+#submit_holder, .devices {
 	text-align: center;
 }
