--- a/styles/account.css
+++ b/styles/account.css
@@ -6,8 +6,6 @@
 	overflow: hidden;
 	padding: 20px;
 	background: #FAFAFA; 
-	-webkit-border-radius: 20px;
-	-moz-border-radius: 20px;
 	border-radius: 20px;
 }
 
@@ -20,14 +18,11 @@
 
 .content-section {
 	padding: 0px;
-	-webkit-border-radius: 20px;
-	-moz-border-radius: 20px;
 	border-radius: 20px;
 }
 
 .shadow {
-	-moz-box-shadow: 0 0 30px 5px #999;
-	-webkit-box-shadow: 0 0 30px 5px #999;
+	box-shadow: 0 0 30px 5px #999;
 }
 
 body {
@@ -40,8 +35,6 @@ form {
 	width: auto; 
 	display: block; 
 	background: #FAFAFA; 
-	-webkit-border-radius: 20px;
-	-moz-border-radius: 20px;
 	border-radius: 20px;
 }
 
@@ -53,8 +46,6 @@ input, textarea{
 	outline: 0;
 	font: normal 15px/150% Verdana, sans-serif;
 
-	-webkit-box-shadow: 0 0 8px rgba(0,0,0,.1);
-	-moz-box-shadow: 0 0 8px rgba(0,0,0,.1);
 	box-shadow: 0 0 8px rgba(0,0,0,.1);
 
 	background: -webkit-linear-gradient(top, #EEE 0px, #FFF 25px);
@@ -70,9 +61,6 @@ textarea {
 input:hover, input:focus,
 textarea:hover, textarea:focus {
 	border-color: #C9C9C9;
-
-	-webkit-box-shadow: 0 0 8px rgba(0,0,0,.15);
-	-moz-box-shadow: 0 0 8px rgba(0,0,0,.15);
 	box-shadow: 0 0 8px rgba(0,0,0,.15);
 }
 
@@ -91,14 +79,13 @@ input[type=submit], #delete, #confirm, #delete_confirm {
 	font-size: 14px;
 	font-weight: bold;
 	color: #FFFFFF;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
+	border-radius: 5px;
 	cursor: pointer;
 }
 
 input[type=submit]:hover {
 	background: #2fccff;
-	-webkit-box-shadow: 1px 1px 8px rgba(0,0,0,.4);
+	box-shadow: 1px 1px 8px rgba(0,0,0,.4);
 }
 
 select{
@@ -107,9 +94,8 @@ select{
 	font-family: Verdana, sans-serif;
 	background: url(../arrow.png) 90% 50% no-repeat;
 
-	-webkit-appearance: none;
-	-webkit-border-radius: 5px;
-	-webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+	border-radius: 5px;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
 	
 	cursor: pointer;
 	border: 1px solid #CCC;
@@ -119,7 +105,7 @@ select{
 }
 
 select:hover, select:focus {
-	-webkit-box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4);
+	box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4);
 	outline: 0;
 	cursor: pointer;
 	border: 1px solid #CCC;
@@ -160,19 +146,19 @@ button {
 	font-size: 14px;
 	font-weight: bold;
 	color: #FFFFFF;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
+	border-radius: 5px;
 	cursor: pointer;
 }
 
 button:hover {
 	background: #494A46;
 	color: #2EBBE8;
-	-webkit-box-shadow: 1px 1px 8px rgba(0,0,0,.4);
+	box-shadow: 1px 1px 8px rgba(0,0,0,.4);
 }
 
 #submit_holder, .devices {
 	text-align: center;
+	margin-bottom: 1px;
 }
 
 #newDevice, #saveButton{
