--- a/styles/help.css
+++ b/styles/help.css
@@ -72,7 +72,7 @@ h2 {
 	padding: 10px;
 }
 
-.content-section h2, h2{
+.content-section h2, h2, .centerMe{
 	text-align: center;
 }
 
@@ -89,4 +89,9 @@ embed{
 	height: 50px;
 	width: 100%;
 	float: left;
+}
+
+p {
+	color: #551A8B;
+	font-weight: bold;
 }
